Result image branding update

--- a/results.html
+++ b/results.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" type="x-icon" href="icon.png">
 <meta charset="utf-8">
 <script>
-  version = "Edition 1" //Remember to update this before making changes to the test itself!
+  version = "1st Edition" //Remember to update this before making changes to the test itself!
 </script>
 </head>
 <script type="application/javascript"
@@ -14,7 +14,7 @@
 </script>
 
 <body>
-<h1>8valuesi - PH Political Dialogue</h1>
+<h1>8values - PH Political Dialogue</h1>
 <hr>
 
 <h1>Results</h1>
@@ -220,8 +220,8 @@ referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
         if (progress  > 30) {ctx.fillText(progress + "%", 670, 597.5)}
 
         ctx.font="300 30px Montserrat"
-        ctx.fillText("PH Politial Dialogue", 780, 60)
-		ctx.fillText(version, 780, 90)
+        ctx.fillText("PH Political Dialogue", 780, 60)
+	ctx.fillText(version, 780, 90)
         ctx.textAlign="center"
         ctx.fillText("Economic Axis: " + document.getElementById("economic-label").innerHTML, 400, 175)
         ctx.fillText("Diplomatic Axis: " + document.getElementById("diplomatic-label").innerHTML, 400, 295)
